# Weave

./: __init__.py  events.py  list-names.py  log.py  messages.py  opcodes.py  unpacklog.py  utils.py  weave2.py
weave1/: AUTHORS  BUGS  Doxyfile  Makefile.am  README  TODO  build-setup.sh  configure.in  crypto.c  message.c  network.c  opcodes.c  opcodes.h  weave.c  weave.h  weave_dump.h
weave1/doc/: Mainpage.dox
weave2/: listnames.py  log.py  simpleplugin.py  testread.py  weave2.py  wowguid.py
weave3/: Makefile.am  WeaveBNetConnection.cpp  WeaveBNetConnection.h  WeaveConnection.cpp  WeaveConnection.h  WeaveCrypt.cpp  WeaveCrypt.h  WeaveGameConnection.cpp  WeaveGameConnection.h  WeaveKeyFinder.cpp  WeaveKeyFinder.h  WeaveLog.cpp  WeaveLog.h  WeaveOpcodes.cpp  WeaveOpcodes.h  WeavePtraceKeyFinder.cpp  WeavePtraceKeyFinder.h  WeaveSniffer.cpp  WeaveSniffer.h  WeaveWin32KeyFinder.cpp  WeaveWin32KeyFinder.h  autogen.sh  configure.ac  genopcodes.py  weave.h  weave3.cpp
weave3/pyweave/: setup.py  weavemodule.cpp
weave3/pyweave/tools/: cricket.py  structures.py  unpacklog.py
